--- a/views/pages/companySubscribe.twig
+++ b/views/pages/companySubscribe.twig
@@ -11,7 +11,7 @@
             <h2>{{ title }}</h2>
         </div>
         <div>
-            <form action="/subscribeCompany" method="post">
+            <form action="/companySubscribe" method="post">
                 <div>
                      <label for="raisonSociale">Raison Sociale</label>
                      <input type="text" name="raisonSociale" id="raisonSociale" required>
