--- a/views/partials/footer.twig
+++ b/views/partials/footer.twig
@@ -1,6 +1,10 @@
+{% block style %}
+        <link rel="stylesheet" href="/assets/css/footer.css">
+    {% endblock %}
+
 <footer>
 <div>
-    <p>TO BE DONE</p>
+    <p>© TrekIT 2025</p>
 </div>
 	
 </footer>
