--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -9,7 +9,15 @@
             <h1>TrekIT</h1>
         </div>
         <div id="navDiv">
-            <nav>
+
+            <!-- Hamburger button -->
+            <button id="menu-toggle" aria-label="Toggle menu" class="hamburger">
+            <span></span>
+            <span></span>
+            <span></span>
+            </button>
+        
+            <nav id="navbar">
                 <ul id="menuLine">
                     <li>
                         <a href="/home">🏠 Dashboard</a>
