--- a/views/layouts/base.twig
+++ b/views/layouts/base.twig
@@ -29,6 +29,8 @@
 
    
   
-    {% block script %}{% endblock %}
+    {% block script %}
+    <script src="/assets/scripts/main.js"></script>
+    {% endblock %}
 </body>
 </html>
