--- a/views/pages/companySubscribe.twig
+++ b/views/pages/companySubscribe.twig
@@ -1,7 +1,7 @@
 {% extends "/layouts/base.twig" %}
 
 {% block style %}
-  <link rel="stylesheet" href="/assets/css/login.css">
+  <link rel="stylesheet" href="/assets/css/companySubscribe.css">
 {% endblock %}
 
 {% block main %}
@@ -9,7 +9,7 @@
   <section>
    
     <div>
-      <form id="loginForm" action="/login" method="post">
+      <form id="companySubscribeForm" action="/companySubscribe" method="post">
        
        <div>
             <img id="trekitLogo" src="/assets/images/trekitWithoutText.png" alt="TrekIT logo">
@@ -18,7 +18,14 @@
        <div id="formTitle">
             <h2>{{ title }}</h2>
         </div>
-        <div class="loginFormInput">
+        <div class="companySubscribeFormInput">
+          <label for="companyName">Raison Sociale</label>
+          <input type="text" name="companyName" id="companyName" value="{{ companyName | default('') }}" required>
+          {% if error.companyName %}
+            <p class="error">{{ error.companyName }}</p>
+          {% endif %}
+        </div>
+        <div class="companySubscribeFormInput">
           <label for="siret">N° Siret</label>
           <input
             type="text"
@@ -36,8 +43,11 @@
             <p class="error">{{ duplicateSiret }}</p>
           {% endif %}
         </div>
-
-        <div class="loginFormInput">
+        <div class="companySubscribeFormInput">
+          <label for="directorName">Nom du directeur</label>
+          <input type="text" name="directorName" id="directorName" value="{{ directorName | default('') }}">
+        </div>
+        <div class="companySubscribeFormInput">
           <label for="password">Votre mot de passe</label>
           <input
             type="password"
@@ -48,11 +58,18 @@
             placeholder="6+ caractères, 1 lettre, 1 chiffre"
           >
         </div>
-        <div>
-          <button type="submit" id="loginSubmit" name="loginSubmit">Connectez-vous</button>
+        <div class="companySubscribeFormInput">
+          <label for="confirmPassword">Confirmez votre mot de passe</label>
+          <input type="password" name="confirmPassword" id="confirmPassword" value="{{ confirmPassword | default('') }}" required>
+          {% if error.confirmPassword %}
+            <p class="error">{{ error.confirmPassword }}</p>
+          {% endif %}
         </div>
         <div>
-          <p id="connectP">Vous n'êtes pas inscrit, <a id="connectA" href="/companySubscribe"> inscrivez-vous</a></p>
+          <button type="submit" id="companySubmit" name="companySubmit">Connecter</button>
+        </div>
+        <div>
+          <p id="connectP">Vous êtes déjà inscrit, <a id="connectA" href="/login">connectez-vous</a></p>
         </div>
       </form>
     </div>
