--- a/views/pages/login.twig
+++ b/views/pages/login.twig
@@ -46,6 +46,7 @@
             required
             pattern="^(?=.*?[0-9])(?=.*?[A-Za-z]).{6,}$"
             placeholder="6+ caractères, 1 lettre, 1 chiffre"
+            autocomplete="current-password"
           >
         </div>
         <div>
