--- a/views/pages/companySubscribe.twig
+++ b/views/pages/companySubscribe.twig
@@ -56,6 +56,7 @@
             required
             pattern="^(?=.*?[0-9])(?=.*?[A-Za-z]).{6,}$"
             placeholder="6+ caractères, 1 lettre, 1 chiffre"
+            autocomplete="current-password"
           >
         </div>
         <div class="companySubscribeFormInput">
