validate user and company

--- a/views/pages/companySubscribe.twig
+++ b/views/pages/companySubscribe.twig
@@ -67,7 +67,7 @@
           {% endif %}
         </div>
         <div>
-          <button type="submit" id="companySubmit" name="companySubmit">Connecter</button>
+          <button type="submit" id="companySubmit" name="companySubmit">Register</button>
         </div>
         <div>
           <p id="connectP">Vous êtes déjà inscrit, <a id="connectA" href="/login">connectez-vous</a></p>
