--- a/public/assets/css/addEmployee.css
+++ b/public/assets/css/addEmployee.css
@@ -52,7 +52,7 @@ body {
     border: 1px solid #d7dcdf;
 }
 
-#employeeSubmit{
+#addEmployeeSubmit{
     width:100%;
     height: 2rem;
     color:#F9FAFB;
