--- a/views/partials/header.twig
+++ b/views/partials/header.twig
@@ -20,13 +20,21 @@
             <nav id="navbar">
                 <ul id="menuLine">
                     <li>
-                        <a href="/home">🏠 Dashboard</a>
+                        <a href="/dashboard">🏠 Dashboard</a>
                     </li>
                     <li>
-                        <a href="/addComputer">💻 Assets</a>
+                        <a href="#">👥 Employés</a>
+                        <ul class="servicesList">
+                            <li><a href="/addEmployee">Ajouter</a></li>
+                            <li><a href="/employees">Liste</a></li>
+                        </ul>
                     </li>
                     <li>
-                        <a href="/employees">👥 Employees</a>
+                        <a href="#">💻 Ordinateurs</a>
+                        <ul class="servicesList">
+                            <li><a href="/addComputer">Ajouter</a></li>
+                            <li><a href="/computerList">Liste</a></li>
+                        </ul>
                     </li>
                     <li>
                         <a href="/repairs">🛠 Repairs</a>
@@ -39,7 +47,7 @@
                     </li>
                     <li>
                         <a href="#">Connexion ▾</a>
-                        <ul id="servicesList">
+                        <ul class="servicesList">
                             <li><a href="/profile">Profile</a></li>
                             <li><a href="/logout">Logout</a></li>
                         </ul>
