--- a/views/pages/listComputers.twig
+++ b/views/pages/listComputers.twig
@@ -21,7 +21,7 @@
               <p>Mac adresse :
                 {{computer.addressMac}}</p>
                 <p>Date d'achat :
-                {{computer.purchaseDate}}</p>
+                {{computer.purchaseDate|date("d/m/Y")}}</p>
                 <p>Statut :
                 {{computer.status}}</p>
                 <p>Employé :
