delete computer and employee

--- a/views/pages/addComputer.twig
+++ b/views/pages/addComputer.twig
@@ -42,10 +42,10 @@
         <div>
           <label for="status">Statut</label>
           <select name="status" id="status">
-            <option value="use">En usage</option>
-            <option value="repair">En réparation</option>
-            <option value="available">Disponible</option>
-            <option value="archived">Retiré</option>
+            <option value="Usagee">En usage</option>
+            <option value="Réparation">En réparation</option>
+            <option value="Disponible">Disponible</option>
+            <option value="Retiré">Retiré</option>
           </select>
         </div>
         <div>
